--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@stitches/react": "^1.2.1",
+    "@types/node": "^16.10.1",
+    "@types/react": "^17.0.24",
+    "axios": "^0.21.4",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "swr": "^1.0.1",
+    "typescript": "^4.4.3"
   },
   "devDependencies": {
     "eslint": "7.32.0",
