--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "axios": "^0.21.4",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "swr": "^1.0.1",
     "typescript": "^4.4.3"
   },
